--- a/src/Volumenzeit/Components/WatchDesignSteps/style.css
+++ b/src/Volumenzeit/Components/WatchDesignSteps/style.css
@@ -11,6 +11,8 @@
   position: relative;
   text-align: center;
   margin-bottom: 150px;
+  font-family: 'Space Age';
+  font-size: 32px;
 }
 
 .step::before {
@@ -40,7 +42,7 @@
   align-items: center;
   justify-content: center;
   z-index: 2;
-  font-size: 16px;
+  font-size: 32px;
   font-weight: 400;
   color: white;
 }
